# HGNC-Biomedical-Data-Management-System-Python-SQL-SQLite-Pandas-Pydantic-Pytest

./: README.md  pyproject.toml
notebooks/: test_normalization.ipynb  test_notebook.ipynb
notebooks/example/: test_data.db  test_data.tsv  test_data_edited.db  test_data_edited.tsv  test_normalization.ipynb  test_normalization_edited.ipynb
src/hgnc/: __init__.py  constants.py  manager.py
tests/: test_features.py
